--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,5 @@
-server:
-  port: 5000
-
+# application.yml은 공통 설정으로 사용하고 프로필별 설정이 이를 오버라이드 함
 spring:
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/menudb
-    username: swcamp
-    password: swcamp
+  profiles:
+    active: test
 
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
